# heros_battle

./: .gitignore  .pre-commit-config.yaml  Hero's Battle.drawio  LICENSE  areas.py  battle.py  changelog.md  characters.py  classes.py  cli.py  creatureclass.py  data.py  decorators.py  game.py  infos.py  inventory.py  items.py  main.py  objects.py  pyproject.toml  readme.md  requirements.txt  spellbook.py  status.py  temp.py  test_classes.py  weapons.py  world.py
data/: characters.py  data.py  quests.py  spells.py  statuses.py  weapons.py  world.py
