[tool.poetry]
name = "hero's battle"
version = "0.1.0"
description = "Turn Based Battle"
authors = ["Sebastian Kupis <sebastian.kupis@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
